# cxxAlgorithms

./: CMakeLists.txt  README.md
arithmetics/: CMakeLists.txt  README.md  clamp.cpp  fourier_trans.cpp  gcd.cpp  isnan.cc  lcm.cpp  limits.cpp  pi_integration.cpp  precision.cc
bytes/: CMakeLists.txt  creation.cpp
casting/: CMakeLists.txt  const_cast.cpp  pointer_to_uint.cpp
dp/: CMakeLists.txt  editing_distance.cpp
encoding/: CMakeLists.txt  README.md
encoding/base16/: demoBase16.cc
encoding/base64/: README.md
fractal/: CMakeLists.txt  README.md  mandelbrot.cpp
graph/: CMakeLists.txt  boost_graph_adjlist.cpp
graph/traversal/: bfs_tests.cpp  dagraph.hh  dagraph_tests.cpp
hashing/: CMakeLists.txt  README.md  boost_hash.cpp  boost_hash_combine.cpp  boost_hierarchical_hashing.cpp  gperf.cpp  hash_map.cpp  hash_tuple.cpp  test_hashing.cpp
insert/: CMakeLists.txt  README.md  append_rotate.cpp  deque.cpp  insert_sort.cpp  map_extract.cpp  map_try_emplace.cpp  vec_insert_elements.cpp
iteration/: CMakeLists.txt  README.md  boost_iterator_facade.cpp  boost_iterator_facade_putc.cpp  counting_iter.cpp  custom_iter_facade.cpp  custom_iterator.cpp  custom_iterator_stl.cpp  every_nth_element.cpp  fib_iter.cpp  iter_neighbour_elements.cpp  iterator_facade.cpp  run_length_encoding.cpp  trans_iter.cpp  zip_iter.cpp  zip_tuples.cpp
iteration/boost_iterator_facade/: array.cpp  bst.cpp  directory_iterator_wrapper.cpp  linkedlist.cpp  putc.cpp
iteration/custom_iterator/: for_loop.cpp  range.cpp
map/: CMakeLists.txt  adhoc_map_sort.cpp  efficient_insert.cpp  efficient_map_accessing.cpp  extract_insert.cpp
memoization/: CMakeLists.txt  lookup.cc
ordered/: CMakeLists.txt  README.md  advance_iterator.cpp  list_merge.cpp  partial_sort.cpp  priority_queue.cpp  reverse_sequence.cpp  set_sort.cpp  simple_heapsort.cpp  simple_quicksort.cpp  simple_quicksort_impl_v1.hh  simple_quicksort_impl_v2.hh  simple_quicksort_impl_v3.hh  simple_timsort.cpp  slide_section.cpp  swap_section.cpp  vector_rotate.cpp  vector_sliding.cpp
ordered/simple_quicksort_impl/: simple_quicksort_impl_v3.hh  simple_quicksort_impl_v4.hh  simple_quicksort_impl_v5.hh  simple_quicksort_impl_v6.hh  simple_quicksort_impl_v7.hh  simple_quicksort_impl_v8.hh
partition/: CMakeLists.txt  gather.cpp  partition_copy.cpp  remove_multi_whitespace.cpp  split.cpp  stable_partition.cpp
permutation/: README.md
prefix/: CMakeLists.txt  subarr_equals_k.cpp
random/: CMakeLists.txt  README.md  bsd_drand48.cpp  bsd_drand48.hh  many_random_nums.cpp  mt19937_state.cpp  rand_histogram.cpp  random_strings.cpp  std_rand.cpp  stl_distribution.cpp  string_to_uuid.cpp  uniform_dist_rand.cpp  uuid_to_string.cpp
random/sampling/: CMakeLists.txt  container_sampling.cpp
remove/: CMakeLists.txt  README.md  vector_erase_remove.cpp  vector_remove_elements.cpp
sampling/: container_sampling.cpp
search/: CMakeLists.txt  README.md  trie.cpp
search/count/: multi_set_map.cpp  set_map.cpp  sorted.cpp  unorderd.cpp
search/exist/: multi_set_map.cpp  sorted.cpp  unsorted.cpp
search/first_in_range/: multi_set_map.cpp  set_map.cpp  sorted.cpp  unsorted.cpp
semantics/: postincrement.cpp
set/: CMakeLists.txt  boost_flat_set.cpp  extract_insert.cpp  union.cpp
stl/: CMakeLists.txt  README.md  auto_if_switch_variable.cpp  compare_iter.cpp  integer_sequence.cpp  move_vector_element_to_position.cpp  std_accumulate.cpp  std_copy.cpp  std_count.cpp  std_equal.cpp  std_find_if.cpp  std_generate.cpp  std_inner_product.cpp  std_transform.cpp
stl/insert/: append_rotate.cpp
stl/insertion/: CMakeLists.txt
stl/reversing/: forward_iter.cpp
stl/rotation/: CMakeLists.txt  vector_rotate.cpp
stl/sliding/: CMakeLists.txt  vector_sliding.cpp
stl/unpack/: structural_binding.cpp  tuple_pair_unpack.cpp
tree/: CMakeLists.txt  README.md  simple_bst.cpp
